// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader should render 1`] = `
Array [
  <div
    className="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      className=""
    >
      <ol
        className="breadcrumb"
      >
        <li
          aria-current={undefined}
          className="breadcrumb-item"
        >
          <a
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          className="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
     
  </div>,
  <h1
    className="h4 page-header page-header-brand"
  >
    <div
      className="page-header-title"
    >
       
      Payer Space
    </div>
  </h1>,
]
`;

exports[`PageHeader should render app icon 1`] = `
Array [
  <div
    className="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      className=""
    >
      <ol
        className="breadcrumb"
      >
        <li
          aria-current={undefined}
          className="breadcrumb-item"
        >
          <a
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          className="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
     
  </div>,
  <h1
    className="h4 page-header page-header-brand"
  >
    <div
      className="page-header-title"
    >
      <span
        className="app-icon app-icon-black"
        title="Payer Space"
      >
        PS
      </span>
       
      Payer Space
    </div>
  </h1>,
]
`;

exports[`PageHeader should render app icon color 1`] = `
Array [
  <div
    className="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      className=""
    >
      <ol
        className="breadcrumb"
      >
        <li
          aria-current={undefined}
          className="breadcrumb-item"
        >
          <a
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          className="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
     
  </div>,
  <h1
    className="h4 page-header page-header-brand"
  >
    <div
      className="page-header-title"
    >
      <span
        className="app-icon app-icon-green"
        title="Payer Space"
      >
        PS
      </span>
       
      Payer Space
    </div>
  </h1>,
]
`;

exports[`PageHeader should render app icon color branded 1`] = `
Array [
  <div
    className="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      className=""
    >
      <ol
        className="breadcrumb"
      >
        <li
          aria-current={undefined}
          className="breadcrumb-item"
        >
          <a
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          className="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
     
  </div>,
  <h1
    className="h4 page-header page-header-brand"
  >
    <div
      className="page-header-title"
    >
      <span
        className="app-icon app-icon-branded-green"
        title="Payer Space"
      >
        PS
        <span
          className="caret"
        />
      </span>
       
      Payer Space
    </div>
  </h1>,
]
`;

exports[`PageHeader should render children 1`] = `
Array [
  <div
    className="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      className=""
    >
      <ol
        className="breadcrumb"
      >
        <li
          aria-current={undefined}
          className="breadcrumb-item"
        >
          <a
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          className="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
     
  </div>,
  <h1
    className="h4 page-header page-header-brand"
  >
    <div
      className="page-header-title"
    >
       
      <p>
        this is cool
      </p>
    </div>
  </h1>,
]
`;

exports[`PageHeader should render feedback 1`] = `
Array [
  <div
    className="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      className=""
    >
      <ol
        className="breadcrumb"
      >
        <li
          aria-current={undefined}
          className="breadcrumb-item"
        >
          <a
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          className="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
     
  </div>,
  <h1
    className="h4 page-header page-header-brand"
  >
    <div
      className="page-header-title"
    >
       
      Payer Space
    </div>
    <div
      className="float-md-right d-inline-block hidden-print dropdown"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="btn btn-light"
        onClick={[Function]}
        type="button"
      >
        Give Feedback
      </button>
      <div
        aria-hidden={true}
        className="p-3 dropdown-menu dropdown-menu-right"
        role="menu"
        style={
          Object {
            "width": "400px",
          }
        }
        tabIndex="-1"
        x-placement={undefined}
      >
        <div
          className="text-center"
        >
          <p>
            Tell us what you think about Payer Space.
          </p>
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-light"
              onClick={[Function]}
              style={
                Object {
                  "fontSize": "1.4em",
                  "padding": ".2em .4em",
                }
              }
              type="button"
            >
              <span
                className="icon icon-smile"
              />
              <span
                className="sr-only"
              >
                Smiley face
              </span>
            </button>
            <button
              className="btn btn-light"
              onClick={[Function]}
              style={
                Object {
                  "fontSize": "1.4em",
                  "padding": ".2em .4em",
                }
              }
              type="button"
            >
              <span
                className="icon icon-meh"
              />
              <span
                className="sr-only"
              >
                Meh face
              </span>
            </button>
            <button
              className="btn btn-light"
              onClick={[Function]}
              style={
                Object {
                  "fontSize": "1.4em",
                  "padding": ".2em .4em",
                }
              }
              type="button"
            >
              <span
                className="icon icon-frown"
              />
              <span
                className="sr-only"
              >
                Frowny face
              </span>
            </button>
          </div>
          <div
            className="invalid-feedback"
          >
            Please select one of the faces above
          </div>
          <textarea
            aria-label="Please provide any feedback, requests, and/or defects."
            className="mt-3 form-control"
            onChange={[Function]}
            placeholder="Feedback? Requests? Defects? (optional)"
          />
          <div
            className="mt-3 text-right"
          >
            <button
              className="btn btn-primary"
              onClick={[Function]}
              type="button"
            >
              Send
            </button>
          </div>
        </div>
      </div>
    </div>
  </h1>,
]
`;

exports[`PageHeader should render trainingLink 1`] = `
Array [
  <div
    className="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      className=""
    >
      <ol
        className="breadcrumb"
      >
        <li
          aria-current={undefined}
          className="breadcrumb-item"
        >
          <a
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          className="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
     
    <span
      className="ml-auto"
      style={
        Object {
          "paddingTop": "12px",
        }
      }
    >
      Need Help?
       
      <a
        href="https://www.youtube.com/watch?v=GgwE94KZJ7E"
        rel="noopener noreferrer"
        target="_blank"
      >
        Watch a demo
      </a>
       
      for 
      Appeals
    </span>
  </div>,
  <h1
    className="h4 page-header page-header-brand"
  >
    <div
      className="page-header-title"
    >
       
      <p>
        this is cool
      </p>
    </div>
  </h1>,
]
`;
